--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "websocket":"~1.0.22",
-    "socket.io":"~1.4.5"
+    "socket.io":"~1.4.5",
+    "mysql": "^2.5.4",
+    "client-sessions": "~0.7.0",
+    "bcryptjs": "2.4.0"
   }
 }
