--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "2.4.0",
     "body-parser": "~1.13.2",
+    "client-sessions": "~0.7.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
-    "websocket":"~1.0.22",
-    "socket.io":"~1.4.5",
     "mysql": "^2.5.4",
-    "client-sessions": "~0.7.0",
-    "bcryptjs": "2.4.0"
+    "pug": "^2.0.4",
+    "serve-favicon": "~2.3.0",
+    "socket.io": "~1.4.5",
+    "websocket": "~1.0.22"
   }
 }
