--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "client-sessions": "~0.8.0",
     "cookie-parser": "~1.4.5",
     "debug": "~4.3.2",
-    "express": "~4.17.1",
-    "jade": "~1.11.0",
+    "express": "^4.19.2",
+    "jade": "^1.9.2",
     "morgan": "~1.10.0",
     "mysql": "^2.18.1",
     "pug": "^3.0.2",
     "serve-favicon": "~2.5.0",
-    "socket.io": "~4.2.0",
+    "socket.io": "^4.7.5",
     "websocket": "~1.0.34"
   }
 }
